DatatypeConverter predates Base64 in Java 8, can do same thing.